[package]
name = "mcp03"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = "0.4"
thiserror = "1.0"